--- a/public/app/main.css
+++ b/public/app/main.css
@@ -1466,6 +1466,9 @@ a.see-all-icons {
     display: block;
     text-align: center;
     white-space: nowrap; }
+  .kameleon-icon i {
+    font-size: 60px;
+    background-color: #f0f3f4; }
 
 .with-round-bg {
   margin-bottom: 6px; }
@@ -5618,7 +5621,7 @@ a.fc-more {
     left: 18px;
     height: 100%;
     width: 4px;
-    background: #d7e4ed; }
+    background: #fff; }
 
 .cd-timeline-block {
   position: relative;
@@ -5685,7 +5688,7 @@ a.fc-more {
 .cd-timeline-content {
   position: relative;
   margin-left: 60px;
-  background: #209e91;
+  background: #fff;
   padding: 1em;
   border-radius: 5px; }
   .cd-timeline-content:after {
@@ -5697,11 +5700,14 @@ a.fc-more {
     margin: 0;
     font-size: 18px; }
   .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
+    color: #1c2b36;
+    font-weight: bold;
     font-size: 13px;
     display: inline-block; }
   .cd-timeline-content p {
-    font-size: 13px;
-    margin-bottom: 0; }
+    font-size: 18px;
+    font-weight: 400;
+    margin: 8px 0 0 0; }
   .cd-timeline-content .cd-read-more {
     float: right;
     padding: .8em 1em;
@@ -5720,19 +5726,16 @@ a.fc-more {
     height: 0;
     width: 0;
     border: 7px solid transparent;
-    border-right: 7px solid white; }
+    border-right: 7px solid #fff; }
 
-.cd-timeline-content.warning {
-  background: rgba(223, 184, 28, 0.2); }
-
-.cd-timeline-content.danger {
-  background: rgba(232, 86, 86, 0.2); }
-
-.cd-timeline-content.primary {
-  background: rgba(32, 158, 145, 0.2); }
-
-.no-touch .cd-timeline-content .cd-read-more:hover {
-  background-color: #d6d6d6; }
+.cd-timeline-content.timeline-content-primary { background-color: #4db1a7 }
+.cd-timeline-content.timeline-content-info { background-color: #57bdda }
+.cd-timeline-content.timeline-content-success { background-color: #a6c733 }
+.cd-timeline-content.timeline-content-warning { background-color: #e5c649 }
+.cd-timeline-content.timeline-content-danger { background-color: #ed7878 }
+.cd-timeline-content[class*="timeline-content-"] { color: #fff; }
+.cd-timeline-content[class*="timeline-content-"] a { color: #666 }
+.cd-timeline-content[class*="timeline-content-"] a:hover { color: #444 }
 
 @media only screen and (min-width: 1170px) {
   #cd-timeline::before {
@@ -5752,7 +5755,7 @@ a.fc-more {
       top: 24px;
       left: 100%;
       border-color: transparent;
-      border-left-color: white; }
+      border-left-color: #fff; }
     .cd-timeline-content .cd-read-more {
       float: left; }
     .cd-timeline-content .cd-date {
@@ -5761,12 +5764,19 @@ a.fc-more {
       left: 137%;
       top: 6px;
       font-size: 16px; }
-  .cd-timeline-content.warning:before {
-    border-left-color: rgba(223, 184, 28, 0.2); }
-  .cd-timeline-content.danger:before {
-    border-left-color: rgba(232, 86, 86, 0.2); }
-  .cd-timeline-content.primary:before {
-    border-left-color: rgba(32, 158, 145, 0.2); }
+  .cd-timeline-block .cd-timeline-content img {
+    border-radius: 50%;
+    float: left;
+    height: 45px;
+    margin: 0 10px 0 0; }
+  .cd-timeline-content.timeline-content-primary:before { border-left-color: #4db1a7; }
+  .cd-timeline-content.timeline-content-info:before { border-left-color: #57bdda; }
+  .cd-timeline-content.timeline-content-success:before { border-left-color: #a6c733; }
+  .cd-timeline-content.timeline-content-warning:before { border-left-color: #e5c649; }
+  .cd-timeline-content.timeline-content-danger:before { border-left-color: #ed7878; }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content img {
+    float: right;
+    margin: 0 0 0 10px; }
   .cd-timeline-block:nth-child(even) .cd-timeline-content {
     float: right; }
   .cd-timeline-block:nth-child(even) .cd-timeline-content::before {
@@ -5775,12 +5785,11 @@ a.fc-more {
     right: 100%;
     border-color: transparent;
     border-right-color: white; }
-  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.warning::before {
-    border-right-color: rgba(223, 184, 28, 0.2); }
-  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.danger::before {
-    border-right-color: rgba(232, 86, 86, 0.2); }
-  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.primary::before {
-    border-right-color: rgba(32, 158, 145, 0.2); }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.timeline-content-primary::before { border-right-color: #4db1a7; }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.timeline-content-info::before { border-right-color: #57bdda; }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.timeline-content-success::before { border-right-color: #a6c733; }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.timeline-content-warning::before { border-right-color: #e5c649; }
+  .cd-timeline-block:nth-child(even) .cd-timeline-content.cd-timeline-content.timeline-content-danger::before { border-right-color: #ed7878; }
   .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
     float: right; }
   .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
@@ -6553,3 +6562,33 @@ a.change-user {
   left: 0;
   right: 0;
   bottom: 0; }
+
+.timeline-icon {
+    box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 26px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #999999;
+    z-index: 100;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%; }
+.timeline-icon.primary { background-color: #209e91 !important; }
+.timeline-icon.success { background-color: #90b900 !important; }
+.timeline-icon.warning { background-color: #dfb81c !important; }
+.timeline-icon.danger { background-color: #e85656 !important; }
+.timeline-icon.info { background-color: #2dacd1 !important; }
+.timeline-icon.default { background-color: #fff !important; color: #666; }
+.timeline-loading {
+  display: table;
+  margin: 20px auto 0 auto;
+  font-size: 60px;
+  height: 60px; }
